<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="itp341.steinhubl.lisa.protectivepark.LoginActivity"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProtectivePark"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:typeface="serif"
        android:layout_marginTop="50dp"
        android:textSize="30dp"/>

    <EditText
        android:layout_marginTop="35dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:id="@+id/emailTextEdit"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextEdit"
        android:hint="@string/Password"
        android:inputType="textPassword"/>


    <Button
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/LoginButton"
        android:text="@string/Login"
        android:typeface="serif"
        android:background="@color/colorPrimary"
        android:textColor="#ffffffff"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>


    <Button
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterButton"
        android:text="@string/Register"
        android:typeface="serif"
        android:background="@color/colorPrimaryBright"
        android:textColor="#ffffffff"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/LoginWithFacebookButton"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_weight="0.04" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/LoginImage"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        />



</LinearLayout>
