<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="itp341.steinhubl.lisa.protectivepark.AddSpotActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewSpot"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:typeface="serif"
        android:textSize="35dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="20dp"
            android:text="@string/GarageLevel"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GarageLevelEditText"
            android:textSize="20dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="20dp"
            android:text="@string/SpotNumber"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SpotNumberEditText"
            android:textSize="20dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="150dp"-->
        <!--android:orientation="vertical">-->
        <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
            <!--android:id="@+id/map"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->
    <!--</LinearLayout>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DismissButton"
        android:text="@string/Dismiss"
        android:background="@color/colorPrimary"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SaveButton"
        android:text="@string/Save"
        android:background="@color/colorPrimary"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:textStyle="bold"/>

</LinearLayout>
