<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="itp341.steinhubl.lisa.protectivepark.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LogOUt"
        android:id="@+id/LogoutButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProtectivePark"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="35dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addSpotButton"
        android:text="@string/addSpot"
        android:background="@color/colorPrimary"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/returnToSpotButton"
        android:text="@string/returnToSpot"
        android:background="@color/colorPrimary"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:textStyle="bold"/>

    <ProgressBar
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:maxHeight="20dp"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />


</LinearLayout>

